--- a/Maxwell-Wang.css
+++ b/Maxwell-Wang.css
@@ -3,11 +3,10 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 710px;
+  min-height: 747px;
 }
 
 .u-section-1 .u-text-1 {
-  font-weight: 700;
   width: 469px;
   margin: 21px auto 0;
 }
@@ -21,7 +20,7 @@
 }
 
 .u-section-1 .u-layout-wrap-1 {
-  margin: 20px auto 21px;
+  margin: 20px auto;
 }
 
 .u-section-1 .u-layout-cell-1 {
@@ -40,8 +39,8 @@
 }
 
 .u-section-1 .u-text-2 {
-  font-weight: 400;
   font-size: 1.875rem;
+  font-weight: 700;
   margin: 20px 0 0;
 }
 
@@ -67,8 +66,8 @@
 }
 
 .u-section-1 .u-text-4 {
-  font-weight: 400;
   font-size: 1.875rem;
+  font-weight: 700;
   margin: 20px 0 0;
 }
 
@@ -93,8 +92,8 @@
 }
 
 .u-section-1 .u-text-6 {
-  font-weight: 400;
   font-size: 1.875rem;
+  font-weight: 700;
   margin: 20px 0 0;
 }
 
@@ -106,20 +105,14 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 957px;
+    min-height: 691px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 60px;
-  }
-
-  .u-section-1 .u-image-1 {
-    margin-top: 85px;
+    font-weight: bold;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-top: 85px;
-    margin-bottom: 60px;
     margin-right: initial;
     margin-left: initial;
   }
@@ -143,7 +136,7 @@
   }
 
   .u-section-1 .u-sheet-1 {
-    min-height: 1439px;
+    min-height: 530px;
   }
 
   .u-section-1 .u-layout-cell-1 {
@@ -188,6 +181,10 @@
     min-height: 1322px;
   }
 
+  .u-section-1 .u-sheet-1 {
+    min-height: 630px;
+  }
+
   .u-section-1 .u-container-layout-1 {
     padding-left: 30px;
     padding-right: 30px;
@@ -207,5 +204,126 @@
 @media (max-width: 575px) {
   .u-section-1 .u-text-1 {
     width: 340px;
+  }
+}.u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 234px;
+}
+
+.u-section-2 .u-layout-wrap-1 {
+  margin: 0 auto 0 0;
+}
+
+.u-section-2 .u-layout-cell-1 {
+  min-height: 169px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 30px 60px;
+}
+
+.u-section-2 .u-text-1 {
+  font-weight: 700;
+  margin: 0;
+}
+
+.u-section-2 .u-btn-1 {
+  border-style: solid;
+  font-weight: 700;
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-layout-cell-2 {
+  min-height: 234px;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 30px 60px;
+}
+
+.u-section-2 .u-social-icons-1 {
+  height: 48px;
+  min-height: 16px;
+  width: 106px;
+  min-width: 42px;
+  white-space: nowrap;
+  margin: 0 auto;
+}
+
+.u-section-2 .u-icon-1 {
+  height: 48px;
+}
+
+.u-section-2 .u-icon-2 {
+  height: 48px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 331px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 139px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 193px;
+  }
+
+  .u-section-2 .u-social-icons-1 {
+    width: 280px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-2 .u-social-icons-1 {
+    width: 264px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 200px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
