--- a/About.css
+++ b/About.css
@@ -11,7 +11,7 @@
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 635px;
+  min-height: 665px;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -20,27 +20,32 @@
 
 .u-section-1 .u-text-1 {
   line-height: 2;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-style: normal;
   font-weight: 400;
   margin: 0;
 }
 
-.u-section-1 .u-image-1 {
-  min-height: 635px;
-  background-image: url("images/20200920-IMG_4157.jpg");
-  background-position: 50% 50%;
+.u-section-1 .u-layout-cell-2 {
+  min-height: 695px;
+  background-image: none;
 }
 
 .u-section-1 .u-container-layout-2 {
   padding: 30px;
 }
 
+.u-section-1 .u-image-1 {
+  width: 475px;
+  height: 585px;
+  margin: 0 auto 0 0;
+}
+
 .u-section-1 .u-text-2 {
-  font-size: 14.375rem;
+  font-size: 6rem;
   letter-spacing: 8px;
   font-weight: 700;
-  margin: 322px 0 0 -193px;
+  margin: -105px 0 0 40px;
 }
 
 @media (max-width: 1199px) {
@@ -54,19 +59,23 @@
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 524px;
+    min-height: 548px;
   }
 
-  .u-section-1 .u-text-1 {
-    font-size: 1.25rem;
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 830px;
+    background-position: 50% 50%;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 524px;
+    width: 395px;
+    height: 486px;
+    margin-top: 392px;
   }
 
   .u-section-1 .u-text-2 {
     width: auto;
+    margin-top: -398px;
     margin-left: -259px;
   }
 }
@@ -80,13 +89,19 @@
     min-height: 100px;
   }
 
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 330px;
+  }
+
   .u-section-1 .u-image-1 {
-    min-height: 568px;
+    width: 285px;
+    height: 351px;
+    margin-top: -216px;
   }
 
   .u-section-1 .u-text-2 {
     font-size: 12.5rem;
-    margin-top: 0;
+    margin-top: -112px;
     margin-left: -337px;
   }
 }
@@ -101,8 +116,8 @@
     padding-right: 10px;
   }
 
-  .u-section-1 .u-image-1 {
-    min-height: 626px;
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 558px;
     background-position: 50% 0%;
   }
 
@@ -111,11 +126,14 @@
     padding-right: 10px;
   }
 
+  .u-section-1 .u-image-1 {
+    margin-top: 120px;
+  }
+
   .u-section-1 .u-text-2 {
     font-size: 9.375rem;
-    margin-top: 391px;
+    margin-top: -57px;
     margin-left: 0;
-    width: auto;
   }
 }
 
@@ -124,13 +142,17 @@
     min-height: 600px;
   }
 
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 444px;
+  }
+
   .u-section-1 .u-image-1 {
-    min-height: 422px;
+    margin-top: 6px;
   }
 
   .u-section-1 .u-text-2 {
     font-size: 6.25rem;
     letter-spacing: 0px;
-    margin-top: 332px;
+    margin-top: -2px;
   }
 }
