--- a/Maxwell-Wang.css
+++ b/Maxwell-Wang.css
@@ -207,15 +207,15 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 293px;
+  min-height: 298px;
 }
 
 .u-section-2 .u-layout-wrap-1 {
-  margin: 0 auto 20px 0;
+  margin: 0 auto 40px 0;
 }
 
 .u-section-2 .u-layout-cell-1 {
-  min-height: 303px;
+  min-height: 288px;
 }
 
 .u-section-2 .u-container-layout-1 {
@@ -225,16 +225,16 @@
 .u-section-2 .u-text-1 {
   font-weight: 700;
   font-size: 3.75rem;
-  margin: 21px 0 0;
+  margin: 0;
 }
 
 .u-section-2 .u-social-icons-1 {
   white-space: nowrap;
-  height: 87px;
+  height: 50px;
   min-height: 16px;
-  width: 184px;
+  width: 110px;
   min-width: 42px;
-  margin: -34px 0 0 auto;
+  margin: 82px auto 0 110px;
 }
 
 .u-section-2 .u-icon-1 {
@@ -250,7 +250,8 @@
   font-weight: 700;
   font-size: 1rem;
   background-image: none;
-  margin: -12px auto 0 0;
+  margin: -50px auto 0 0;
+  padding: 12px 26px 13px 25px;
 }
 
 @media (max-width: 1199px) {
@@ -264,7 +265,7 @@
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 250px;
+    min-height: 237px;
   }
 }
 
@@ -280,6 +281,12 @@
   .u-section-2 .u-container-layout-1 {
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: 450px;
   }
 }
 
@@ -297,5 +304,9 @@
 @media (max-width: 575px) {
   .u-section-2 .u-text-1 {
     font-size: 1.5rem;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-right: 250px;
   }
 }
