--- a/nicepage.css
+++ b/nicepage.css
@@ -31404,28 +31404,27 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 52px;
+  min-height: 56px;
 }
 
 .u-header .u-menu-1 {
-  font-family: size-14;
   margin: 10px auto;
 }
 
 .u-header .u-nav-1 {
   font-size: 1rem;
+  letter-spacing: 0px;
+  text-transform: uppercase;
+  font-weight: 500;
+  background-image: none;
 }
 
 .u-header .u-nav-2 {
-  font-size: 1rem;
+  font-size: 1.25rem;
 }
 
 
-@media (max-width: 767px) {
-  .u-header .u-sheet-1 {
-    min-height: auto;
-  }
-}
+
 
 .u-footer {
   background-image: none;
