--- a/Maxwell-Wang.css
+++ b/Maxwell-Wang.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 569px;
+  min-height: 644px;
 }
 
 .u-section-1 .u-image-1 {
@@ -11,17 +11,17 @@
   height: 400px;
   background-image: url("images/20201011-IMG_4225.jpg");
   background-position: 50% 50%;
-  margin: 10px auto 0;
+  margin: 30px auto 0;
 }
 
 .u-section-1 .u-text-1 {
   width: 880px;
-  margin: 10px auto 0;
+  margin: 30px auto 0;
 }
 
 .u-section-1 .u-text-2 {
   width: 880px;
-  margin: 10px auto;
+  margin: 30px auto 0;
 }
 
 @media (max-width: 991px) {
@@ -52,7 +52,6 @@
   .u-section-1 .u-image-1 {
     width: 340px;
     height: 340px;
-    margin-top: -86px;
   }
 
   .u-section-1 .u-text-1 {
@@ -67,7 +66,7 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 440px;
 }
 
 .u-section-2 .u-list-1 {
@@ -75,7 +74,8 @@
   grid-template-columns: calc(33.3333% - 7px) calc(33.3333% - 7px) calc(33.3333% - 7px);
   grid-template-rows: auto;
   grid-gap: 10px 10px;
-  margin: 10px 0;
+  height: auto;
+  margin: 30px 0;
 }
 
 .u-section-2 .u-list-item-1 {
@@ -88,6 +88,7 @@
 }
 
 .u-section-2 .u-text-1 {
+  text-decoration: none solid rgb(255, 255, 255);
   margin: 0;
 }
 
@@ -96,14 +97,14 @@
 }
 
 .u-section-2 .u-image-1 {
-  width: 293px;
-  height: 144px;
-  margin: 13px 1px 0 0;
+  width: 157px;
+  height: 157px;
+  margin: 21px auto 0;
 }
 
 .u-section-2 .u-list-item-2 {
-  background-position: 50% 50%;
   animation-duration: 1000ms;
+  background-position: 50% 50%;
 }
 
 .u-section-2 .u-container-layout-2 {
@@ -111,6 +112,7 @@
 }
 
 .u-section-2 .u-text-3 {
+  text-decoration: none solid rgb(255, 255, 255);
   margin: 0;
 }
 
@@ -119,14 +121,14 @@
 }
 
 .u-section-2 .u-image-2 {
-  width: 293px;
-  height: 144px;
-  margin: 13px 1px 0 0;
+  width: 157px;
+  height: 157px;
+  margin: 21px auto 0;
 }
 
 .u-section-2 .u-list-item-3 {
-  background-position: 50% 50%;
   animation-duration: 1000ms;
+  background-position: 50% 50%;
 }
 
 .u-section-2 .u-container-layout-3 {
@@ -134,6 +136,7 @@
 }
 
 .u-section-2 .u-text-5 {
+  text-decoration: none solid rgb(255, 255, 255);
   margin: 0;
 }
 
@@ -142,48 +145,27 @@
 }
 
 .u-section-2 .u-image-3 {
-  width: 293px;
-  height: 144px;
-  margin: 13px 1px 0 0;
+  width: 157px;
+  height: 157px;
+  margin: 21px auto 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 351px;
+    min-height: 373px;
   }
 
   .u-section-2 .u-list-1 {
     min-height: 313px;
-    height: auto;
+    grid-template-columns: repeat(3, calc(33.333333333333336% - 7px));
     margin-right: initial;
     margin-left: initial;
-  }
-
-  .u-section-2 .u-image-1 {
-    margin-top: 43px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-2 .u-image-2 {
-    margin-top: 43px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-2 .u-image-3 {
-    margin-top: 43px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 916px;
+    min-height: 779px;
   }
 
   .u-section-2 .u-list-1 {
@@ -200,10 +182,19 @@
     margin-right: initial;
     margin-left: initial;
   }
-}
 
-@media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 934px;
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
